# stack

./: .travis.yml  CMakeLists.txt  LICENSE  README.md  stack.cpp  stack.hpp
include/: stack.cpp  stack.hpp
sources/: stack.cpp
tests/: CMakeLists.txt  init.cpp
